--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">Login Screens:</h6>
             <a class="dropdown-item" href="/login">Login</a>
-            <a class="dropdown-item" href="register.html">Register</a>
+            <a class="dropdown-item" href="/register">Register</a>
             <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Other Pages:</h6>
