--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -12,13 +12,13 @@
     <title>SB Admin - Forgot Password</title>
 
     <!-- Bootstrap core CSS-->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin.css" rel="stylesheet">
+    <link href="../static/css/sb-admin.css" rel="stylesheet">
 
   </head>
 
@@ -29,32 +29,32 @@
         <div class="card-header">Reset Password</div>
         <div class="card-body">
           <div class="text-center mb-4">
-            <h4>Forgot your password?</h4>
-            <p>Enter your email address and we will send you instructions on how to reset your password.</p>
+            <h4>Olvidó su contraseña?</h4>
+            <p>Ingrese su usuario y siga las instrucciones.</p>
           </div>
           <form>
             <div class="form-group">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Enter email address" required="required" autofocus="autofocus">
-                <label for="inputEmail">Enter email address</label>
+                <input type="text" id="inputEmail" class="form-control" placeholder="Digite su usuario" required="required" autofocus="autofocus">
+                <label for="inputEmail">Digite su usuario</label>
               </div>
             </div>
-            <a class="btn btn-primary btn-block" href="login.html">Reset Password</a>
+            <a class="btn btn-primary btn-block" href="/login">Reset Password</a>
           </form>
           <div class="text-center">
-            <a class="d-block small mt-3" href="register.html">Register an Account</a>
-            <a class="d-block small" href="login.html">Login Page</a>
+            <a class="d-block small mt-3" href="/register">Registrar usuario</a>
+            <a class="d-block small" href="/login">Página de inicio de sesión</a>
           </div>
         </div>
       </div>
     </div>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/vendor/jquery/jquery.min.js"></script>
+    <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="../static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   </body>
 
