--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
             <h6 class="dropdown-header">Login Screens:</h6>
             <a class="dropdown-item" href="/login">Login</a>
             <a class="dropdown-item" href="/register">Register</a>
-            <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
+            <a class="dropdown-item" href="/forgot-password">Forgot Password</a>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Other Pages:</h6>
             <a class="dropdown-item" href="404.html">404 Page</a>
