--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Forgot Password</title>
+    <title>SB Admin - Restablecer Contraseña</title>
 
     <!-- Bootstrap core CSS-->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 
     <div class="container">
       <div class="card card-login mx-auto mt-5">
-        <div class="card-header">Reset Password</div>
+        <div class="card-header">Restablecer contraseña</div>
         <div class="card-body">
           <div class="text-center mb-4">
             <h4>Olvidó su contraseña?</h4>
@@ -39,7 +39,7 @@
                 <label for="inputEmail">Digite su usuario</label>
               </div>
             </div>
-            <a class="btn btn-primary btn-block" href="/login">Reset Password</a>
+            <a class="btn btn-primary btn-block" href="/login">Restablecer contraseña</a>
           </form>
           <div class="text-center">
             <a class="d-block small mt-3" href="/register">Registrar usuario</a>
