--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Register</title>
+    <title>SB Admin - Registrar usuario</title>
 
     <!-- Bootstrap core CSS-->
     <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,52 +26,52 @@
 
     <div class="container">
       <div class="card card-register mx-auto mt-5">
-        <div class="card-header">Register an Account</div>
+        <div class="card-header">Registrar un Usuario</div>
         <div class="card-body">
           <form>
             <div class="form-group">
               <div class="form-row">
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="text" id="firstName" class="form-control" placeholder="First name" required="required" autofocus="autofocus">
-                    <label for="firstName">First name</label>
+                    <input type="text" id="firstName" class="form-control" placeholder="Nombre" required="required" autofocus="autofocus">
+                    <label for="firstName">Nombre</label>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="text" id="lastName" class="form-control" placeholder="Last name" required="required">
-                    <label for="lastName">Last name</label>
+                    <input type="text" id="lastName" class="form-control" placeholder="Apellido" required="required">
+                    <label for="lastName">Apellido</label>
                   </div>
                 </div>
               </div>
             </div>
             <div class="form-group">
               <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="required">
-                <label for="inputEmail">Email address</label>
+                <input type="text" id="inputEmail" class="form-control" placeholder="Usuario" required="required">
+                <label for="inputEmail">Usuario</label>
               </div>
             </div>
             <div class="form-group">
               <div class="form-row">
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
-                    <label for="inputPassword">Password</label>
+                    <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required="required">
+                    <label for="inputPassword">Contraseña</label>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-label-group">
-                    <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm password" required="required">
-                    <label for="confirmPassword">Confirm password</label>
+                    <input type="password" id="confirmPassword" class="form-control" placeholder="Confirmar contraseña" required="required">
+                    <label for="confirmPassword">Confirmar contraseña</label>
                   </div>
                 </div>
               </div>
             </div>
-            <a class="btn btn-primary btn-block" href="login.html">Register</a>
+            <a class="btn btn-primary btn-block" href="/login">Registrar</a>
           </form>
           <div class="text-center">
-            <a class="d-block small mt-3" href="login.html">Login Page</a>
-            <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+            <a class="d-block small mt-3" href="/login">Página de acceso</a>
+            <a class="d-block small" href="/forgot-password">Olvidó su contraseña?</a>
           </div>
         </div>
       </div>
